# SafeQL

./: Cargo.toml  README.md  build.rs  gdb_track_cmds
.cargo/: config.toml
.github/workflows/: release.yml  release_nightly.yml
crates/embedding/: Cargo.toml
crates/embedding/src/: fast.rs  lib.rs  openai.rs
crates/softql/: Cargo.toml
crates/softql/src/: ast.rs  lib.rs  parser.rs  softql.pest
crates/text2softql/: Cargo.toml
crates/text2softql/src/: lib.rs  openai.rs  prompt.rs
docker/: pgvecto-rs-rootless.Dockerfile  pgvecto-rs.Dockerfile
docs/: conf.py  data_loading.md  index.rst  installation.md  overview.md  parameters.md  search_based_refinement.md
scripts/: package.sh
sql/install/: vectors--0.4.0.sql
src/: lib.rs
src/embedding/: mod.rs
src/gucs/: mod.rs  model.rs  parser.rs
src/parser/: chat_analyze.rs  hooks.rs  mod.rs
src/safeql/: cache.rs  mod.rs  refine.rs  score.rs  search.rs  utils.rs
src/softql/: mod.rs  parsed_result_handler.c  parsed_result_handler.h  pg_query_enum_defs.c  pg_query_readfuncs_conds.c  pg_query_readfuncs_defs.c  protobuf.rs  softql_binder.rs  softql_parser.rs  softql_resolver.rs
src/softql/protobuf-c/: protobuf-c.c  protobuf-c.h
src/sql/: bootstrap.sql  finalize.sql
src/utils/: catalog.rs  mod.rs  schema.rs
tests/safeql/: ambiguous_refinement.slt  argument_refinement.slt  column_refinement.slt  funcname_refinement.slt  impossible_refinement.slt  operand_refinement.slt  table_refinement.slt  value_refinement.slt
tests/softql/: aggregate.slt  filter.slt  join.slt  order.slt  project.slt
