[package]
name = "embedding"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = "1"
thiserror = "1"
fastembed = { version = "4.6.0", default-features = false, features = ["ort-download-binaries", "ort-load-dynamic", "hf-hub-native-tls"] }
ort = { version = "=2.0.0-rc.9", features = [ "cuda" ] }

[lints]
workspace = true

[dev-dependencies]
httpmock = "0.7.0"
serde_json = "1"
